// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Field disables the submit button if an invalid url is supplied 1`] = `
<App>
  <section
    className="pageInner-header "
  >
    <div
      className="pageInner-titleWrap"
    >
      <h1
        className="title"
      >
        Delete the BS
      </h1>
      <h3
        className="subTitle"
      >
        View the content of any website distraction-free.
      </h3>
    </div>
    <SearchField
      isLoading={false}
      setUrl={[Function]}
      submitUrl={[Function]}
      url={
        Object {
          "touched": true,
          "value": "brokenurl.com",
        }
      }
    >
      <div
        id="searchWrapper"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            onChange={[Function]}
            placeholder="Paste a website URL to delete bs"
            type="text"
            value="brokenurl.com"
          />
          <button
            className="contactForm-submitButton"
            disabled={true}
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </SearchField>
  </section>
  <PrevSearches
    data={Array []}
    handleResubmit={[Function]}
  />
</App>
`;

exports[`Search Field enables the submit button if a valid url is supplied 1`] = `
<App>
  <section
    className="pageInner-header "
  >
    <div
      className="pageInner-titleWrap"
    >
      <h1
        className="title"
      >
        Delete the BS
      </h1>
      <h3
        className="subTitle"
      >
        View the content of any website distraction-free.
      </h3>
    </div>
    <SearchField
      isLoading={false}
      setUrl={[Function]}
      submitUrl={[Function]}
      url={
        Object {
          "touched": true,
          "value": "https://validurl.com",
        }
      }
    >
      <div
        id="searchWrapper"
      >
        <form
          onSubmit={[Function]}
        >
          <input
            onChange={[Function]}
            placeholder="Paste a website URL to delete bs"
            type="text"
            value="https://validurl.com"
          />
          <button
            className="contactForm-submitButton"
            disabled={false}
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </SearchField>
  </section>
  <PrevSearches
    data={Array []}
    handleResubmit={[Function]}
  />
</App>
`;

exports[`Search Field renders a disabled submit button on mount 1`] = `
<SearchField
  content={null}
  error={null}
  isLoading={false}
  setUrl={[Function]}
  url={
    Object {
      "touched": false,
      "value": "",
    }
  }
>
  <div
    id="searchWrapper"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        placeholder="Paste a website URL to delete bs"
        type="text"
        value=""
      />
      <button
        className="contactForm-submitButton"
        disabled={true}
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</SearchField>
`;
